# G19_Programacao_Dinamica_PA-26.1

./: .gitignore  README.md  knowledge_base.txt  pyproject.toml
docs/: app.js  data.json  index.html  style.css
src/: dp_core.cpp  dp_core.h  knapsack_engine.cpp  rag_orchestrator.py
