[project]
name = "g19-programacao-dinamica-pa-26-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "google-genai>=2.10.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]
